apps/base/observability/kube-prometheus-stack/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-prometheus
  namespace: observability
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - hosts:
        - prometheus.svc.server.home
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - prometheus.svc.server.home
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: monitoring-tls-secret
